--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/admin-templates/crear-servicio-template/crear-servicio-template.component.html
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/admin-templates/crear-servicio-template/crear-servicio-template.component.html
@@ -1,12 +1,12 @@
 <app-header [navBar]="navBar"></app-header>
 
 <div class="container-body">
-    <div class="titulo">Registrar barbero</div>
+    <div class="titulo">Crear Servicio</div>
     <div class="container-form">
         <div class="form">
-            <app-formulario [className]="formBarbero.className" [textoBoton]="formBarbero.textoBoton"
+            <app-formulario [className]="formCrearServicio.className" [textoBoton]="formCrearServicio.textoBoton"
                 [background]="'white'"
-                [listaCampos]="formBarbero.listaCampos">
+                [listaCampos]="formCrearServicio.listaCampos">
             </app-formulario>
         </div>
     </div>
