--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/login-template/login-template/login-template.component.html
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/login-template/login-template/login-template.component.html
@@ -24,6 +24,7 @@
                             <app-formulario 
                                 [className]="formLogin.className"
                                 [textoBoton]="formLogin.textoBoton" 
+                                [background]="'white'"
                                 [listaCampos]="formLogin.listaCampos">
                             </app-formulario>
                         </div>
