--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/atoms/input/input.component.css
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/atoms/input/input.component.css
@@ -14,8 +14,52 @@
     outline: none;
 }
 
-.input:focus {
-    border-color: var(--select-color);
+.file-wrapper {
+    width: 100%;
+    height: 3.5vw;
+    display: flex;
+    align-items: center;
+    position: relative;
+    font-family: "GT", sans-serif;
+    font-size: 0.8vw;
+}
+
+.opciones {
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+}
+
+.checkbox-opcion {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    font-family: "GT", sans-serif;
+    font-size: 0.8vw;
+    cursor: pointer;
+    margin: 6px 0;
+}
+
+.checkbox-opcion input[type="checkbox"] {
+    appearance: none;
+    -webkit-appearance: none;
+
+    width: 18px;
+    height: 18px;
+
+    border: 1px solid var(--black-color);
+    border-radius: 50%;
+
+    cursor: pointer;
+    background-color: var(--white-color);
+
+    position: relative;
+    transition: 0.2s ease;
+}
+
+/* Cuando está marcado */
+.checkbox-opcion input[type="checkbox"]:checked {
+    background-color: var(--select-color);
 }
 
 .error {
