--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/organisms/formulario/formulario.component.css
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/organisms/formulario/formulario.component.css
@@ -1,10 +1,10 @@
-.container-form.form-login {
+.container-form.flex {
     display: flex;
     flex-direction: column;
     gap: 2rem;
 }
 
-.container-form.form-signup {
+.container-form.grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 2rem;
@@ -12,7 +12,7 @@
     width: 100%;
 }
 
-.form.form-login button, .form.form-signup button {
+button {
     margin-top: 2.2vw;
     background-color: var(--select-color);
     color: var(--white-color);
@@ -29,12 +29,12 @@
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-.form.form-login button:disabled {
+button:disabled {
     opacity: 0.5;
     cursor: not-allowed;
 }
 
-.form.form-login button:not(:disabled):hover, .form.form-signup button:not(:disabled):hover {
+button:not(:disabled):hover {
     background-color: transparent;
     color: var(--select-color);
 }
