--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/barbero-templates/crear-turno-template/crear-turno-template.component.css
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/barbero-templates/crear-turno-template/crear-turno-template.component.css
@@ -28,7 +28,7 @@
 
 .form {
     width: 80%;
-    padding: 2em;
+    padding: 2em  14vw;
     margin-bottom: 1.5rem;
     background-color: var(--white-color);
     border-radius: 15px;
