--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/barbero-templates/crear-turno-template/crear-turno-template.component.html
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/barbero-templates/crear-turno-template/crear-turno-template.component.html
@@ -1,12 +1,12 @@
 <app-header [navBar]="navBar"></app-header>
 
 <div class="container-body">
-    <div class="titulo">Registrar barbero</div>
+    <div class="titulo">Nuevo Turno</div>
     <div class="container-form">
         <div class="form">
-            <app-formulario [className]="formBarbero.className" [textoBoton]="formBarbero.textoBoton"
+            <app-formulario [className]="formNuevoTurno.className" [textoBoton]="formNuevoTurno.textoBoton"
                 [background]="'white'"
-                [listaCampos]="formBarbero.listaCampos">
+                [listaCampos]="formNuevoTurno.listaCampos">
             </app-formulario>
         </div>
     </div>
