--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/login-template/signup-template/signup-template.component.html
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/login-template/signup-template/signup-template.component.html
@@ -23,7 +23,8 @@
                             <div class="titulo-login">Nueva Cuenta</div>
                             <app-formulario 
                                 [className]="formLogin.className"
-                                [textoBoton]="formLogin.textoBoton" 
+                                [textoBoton]="formLogin.textoBoton"
+                                [background]="'white'"
                                 [listaCampos]="formLogin.listaCampos">
                             </app-formulario>
                         </div>
